--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-animations": "^1.0.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
+    "react-resize-detector": "^6.7.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
