--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "axios": "^0.21.1",
     "formik": "^2.2.6",
     "lodash": "^4.17.21",
-    "node-sass": "^5.0.0",
     "radium": "^0.26.1",
     "react": "^17.0.2",
     "react-animations": "^1.0.0",
@@ -20,6 +19,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
+    "sass": "^1.54.4",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.9"
   },
