--- a/nginx.conf
+++ b/nginx.conf
@@ -26,4 +26,11 @@ http {
       index index.html index.htm;
       try_files $uri $uri/ /index.html;
     }
+    localtion /admin {
+      proxy_pass http://localhost:5000/admin/;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection 'upgrade';
+      proxy_set_header Host $host;
+      proxy_cache_bypass $http_upgrade;
+    }
 }}
